--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="khe">
 <head>
 
-  <title>Kent Hack Enough 2015</title>
+  <title>Kent Hack Enough 2016</title>
   <meta name="description" content="Design. Build. Party. Kent State's annual hackathon, October 9-11th 2015.">
 
   <!-- Behavioral Meta Data -->
@@ -13,12 +13,12 @@
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700|Oswald:300,400,700' rel='stylesheet' type='text/css'>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="/dist/styles/bower.min.css">
-  <link rel="stylesheet" href="/dist/styles/styles.min.css">
+  <link rel="stylesheet" href="./dist/styles/bower.min.css">
+  <link rel="stylesheet" href="./dist/styles/styles.min.css">
 
   <!-- Scripts -->
-  <script src="/dist/scripts/bower.min.js"></script>
-  <script src="/dist/scripts/scripts.min.js"></script>
+  <script src="./dist/scripts/bower.min.js"></script>
+  <script src="./dist/scripts/scripts.min.js"></script>
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="img/favicon.ico" />
@@ -31,7 +31,7 @@
   <div ui-view></div>
 
   <!-- UI Scripts -->
-  <script src="/bower_components/foundation/js/foundation.min.js"></script>
+  <script src="bower_components/foundation/js/foundation.min.js"></script>
   <script>
     $.noConflict();
     jQuery(document).foundation();
