--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <!-- Fonts -->
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700|Oswald:300,400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
 
   <!-- CSS -->
   <link rel="stylesheet" href="./dist/styles/bower.min.css">
@@ -32,6 +33,8 @@
 
   <!-- UI Scripts -->
   <script src="bower_components/foundation/js/foundation.min.js"></script>
+  <script src="bower_components/threejs/build/three.min.js"></script>
+  <script src="bower_components/angular-elastic-input/dist/angular-elastic-input.min.js"></script>
   <script>
     $.noConflict();
     jQuery(document).foundation();
