--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 
   <!-- Fonts -->
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700|Oswald:300,400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
 
   <!-- CSS -->
   <link rel="stylesheet" href="/dist/styles/bower.min.css">
   <link rel="stylesheet" href="/dist/styles/styles.min.css">
 
   <!-- Scripts -->
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
+
   <script src="/dist/scripts/bower.min.js"></script>
   <script src="/dist/scripts/scripts.min.js"></script>
 
