Fix Relative Links

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="./dist/styles/bower.min.css">
-  <link rel="stylesheet" href="./dist/styles/styles.min.css">
+  <link rel="stylesheet" href="/dist/styles/bower.min.css">
+  <link rel="stylesheet" href="/dist/styles/styles.min.css">
 
   <!-- Scripts -->
-  <script src="./dist/scripts/bower.min.js"></script>
-  <script src="./dist/scripts/scripts.min.js"></script>
-  
+  <script src="/dist/scripts/bower.min.js"></script>
+  <script src="/dist/scripts/scripts.min.js"></script>
+
   <!-- Favicon -->
   <link rel="shortcut icon" href="img/favicon.ico" />
 
