--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <!-- UI Scripts -->
   <script src="bower_components/foundation/js/foundation.min.js"></script>
   <script src="bower_components/angular-elastic-input/dist/angular-elastic-input.min.js"></script>
+  <script src="bower_components/angular-scroll/angular-scroll.min.js"></script>
   <script>
     $.noConflict();
     jQuery(document).foundation();
